--- a/mystyle.css
+++ b/mystyle.css
@@ -4,3 +4,7 @@ h1{color: #F0A050;}
 
 th, td{border: dashed thick black;}
 th.important{color: red;}
+
+p.sample1{border: double 10px #0000ff;}
+p.sample2{bprder: inset 10px #ff0000;}
+p.sample3{margin: 30px; padding:30px; bprder:10px; medium spolid #ff00ff;}
